# FinalProject-AdvandedProgramming

./: README.md  a.out
FinalProject/: .gitignore  CMakeLists.txt  FirstTest.c  Makefile  _OMP1.pgm  a.out  ejemplo_1.pgm  ejemplo_1_OMP1.pgm  ejemplo_1_OMP10.pgm  ejemplo_1_OMP2.pgm  ejemplo_1_OMP3.pgm  ejemplo_1_OMP4.pgm  ejemplo_1_OMP5.pgm  ejemplo_1_OMP6.pgm  ejemplo_1_OMP7.pgm  ejemplo_1_OMP8.pgm  ejemplo_1_OMP9.pgm  game_of_life_omp.c  game_of_life_omp.h  gosper_glider_gun.pgm  gosper_glider_gun_OMP1.pgm  gosper_glider_gun_OMP10.pgm  gosper_glider_gun_OMP2.pgm  gosper_glider_gun_OMP3.pgm  gosper_glider_gun_OMP4.pgm  gosper_glider_gun_OMP5.pgm  gosper_glider_gun_OMP6.pgm  gosper_glider_gun_OMP7.pgm  gosper_glider_gun_OMP8.pgm  gosper_glider_gun_OMP9.pgm  mongoose  mongoose-example.c  mongoose.c  mongoose.h  multi  multithreaded.c  new  new-example.c  pgm_image.c  pgm_image.h  (+20 more)
FinalProject/Tests/: post-mongoose.c
FinalProject/WebRoot/: differences.txt  omp.html  post-array.html  post-pi.html  post.html  preOmp.html  style.css
FinalProject/multi.dSYM/Contents/Resources/DWARF/: multi
ThreadedServer/: Makefile  bank_server  bank_server.c  fatal_error.c  fatal_error.h  myqueue.c  myqueue.h  sockets.c  sockets.h
WebServer/: common.h
